syntax = "proto3";

option csharp_namespace = "Luxelot.Apps.FserveApp.Messages";

message Status
 {
    Operation operation = 1;
    int32 status_code = 2;
    string status_message = 3;
    bytes result_payload = 4;
}

enum Operation {
    NONE = 0;
    AUTHENTICATION = 1;
    CD = 2;
    PREPARE_DOWNLOAD = 3;
    GET_CHUNK = 4;
}